[package]
name = "sufat"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
debug=2
lto="thin"

[profile.dev.package."*"]
opt-level = 3
debug=2

[dependencies]
ash = "0.37.1"
ash-window = "0.12.0"
cstr = "0.2.11"
env_logger = "0.10.0"
log = "0.4.17"
raw-window-handle = "0.5.0"
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
winit = { version = "0.27.5", features = ["serde"] }
